pootle/static/css/style.css
/* ... */
.form p.info
{
    margin: 0.3em 0;
}

.form .success
{
    color: #390;
}

.form .error
{
    color: #c33;
}

p.help,
span.help_text
{
    font-size: 85%;
    font-style: italic;
}

/* FORM ERROR LISTS */

ul.errorlist
{
    margin: 0;
    padding: 0;
}

.errorlist li
{
    color: #c33;
    margin-top: 0.2em;
}



/*
 * NEWS FORM
 */

.news-feed,
.news-feed-with-form
{
    margin-top: 2em;
}

.news-feed-with-form
{
    margin-left: 38em;
}

.news
{
    margin: 2em 0;
    float: left;
}

/*
 * CAPTCHA FORM
 */

.form .captcha
{
    text-align: left;
    margin-top: 1em;
}

.form .captcha label
{
    font-size: 120%;
    margin-right: 0.6em;
}

.form .captcha input[type="text"]
{
    font-size: 120%;
    width: 3em;
}

.form .captcha input[type="submit"]
{
    margin-left: 1em;
    vertical-align: bottom;
}

.form .captcha ul.errorlist
{
    float: right;
    line-height: 2em;
}


/*
 * STATIC PAGES
 */

#staticpage
{
    margin: 2em auto;
    padding: 0 2em;
    font-size: 120%;
    max-width: 960px;
}

#staticpage h1
{
    font-size: 2.2em;
    line-height: 85%;
    margin: 1em 0 0.5em;
    margin-bottom: 1em;
}

#staticpage h2
{
    color: rgba(25, 15, 0, 0.5);
    font-size: 1.8em;
    margin: 1em 0 0.5em;
}

#staticpage h3
{
    margin: 1em 0 0.5em;
}

#staticpage p
{
    margin: 0.5em 0;
}


/*
 * SETTINGS PAGE
 */

div.settings-container
{
    display: block;
    margin: 0 auto 2em;
    margin: 1em;
}

.settings-container h2
{
    margin: 0 0 0.5em;
}

.settings-container h2,
.module .hd h2,
.module-primary .hd h2,
.hd h2
{
    font-family: webfont_light, 'Helvetica Neue', Helvetica, Helvetica, Arial, sans-serif;
    font-size: 2.2em;
}

.settings-container p
{
    margin-bottom: 1em;
}

.settings-container input,
.settings-container select,
.settings-container textarea,
#login input[type="text"],
#login input[type="password"],
#login select,
#register input[type="text"],
#register input[type="password"]
{
    display: block;
}

.settings-container table
{
    width: 100%;
    margin-bottom: 1em;
}

.settings-container td
{
    font-size: inherit;
}

div#settings
{
    margin-bottom: 2em;
}

/* ADMIN TABLE BACKGROUNDS */

.other-selected
{
    background-color: #8ec904 !important;
}

.delete-selected
{
    background-color: #e08566 !important;
}

.delete-selected:nth-child(even)
{
    background-color: #d67f62 !important;
}

.delete-selected > *
{
    filter:alpha(opacity=40);
    opacity: 0.4;
}

.delete-selected td.DELETE
{
    filter:alpha(opacity=100);
    opacity: 1;
}

.other-selected a,
.delete-selected a
{
    color: #fff;
}

/*
 * SUMMARIES
 */

div.latestnews ul
{
    margin: 0 1em;
}

div.latestnews li
{
    list-style-type: square;
}

tr.item.empty
{
    filter:alpha(opacity=65);
    opacity: 0.65;
}

table.stats td.language,
table.stats td.project
{
    white-space: nowrap;
}

td.stats-name
{
    white-space: nowrap;    
}

td.stats-number
{
    padding-right: 26px !important; /* magic number to put padding between right and left aligned column, and to right-align heading with number */
}

td.stats-percentage
{
    display: none;
}

table.stats .number,
th.stats-number,
td.stats-number,
td.stats-percentage
{
    text-align: right;
}

td.stats-number.need-translation a,
td.stats-number.suggestions a,
td.stats-number.critical a
{
    display: inline-block;
    background: #0489b7;
    color: #fff;
    padding: 0 0.5em;
    margin-right: -0.5em;

    -webkit-border-radius: 1em;
       -moz-border-radius: 1em;
            border-radius: 1em;
}

td.stats-number.suggestions a
{
    background: #bbaa66;
}

td.stats-number.critical a
{
    background: #c30;
}

td.stats-name .user-nobody
{
    font-style: italic;
}

td.stats-name.folder
{
    font-weight: bold;
}

td.last-activity
{
    width: 100%;
}

html[dir="rtl"] td.language,
html[dir="rtl"] td.stats-name,
{
    text-align: right !important;
}

.item
{
    padding: 1em;
}

.item .title
{
    font-weight: bold;
}

.item h2
{
    font-size: 100%;
}

/* Expanded checks */

.checks
{
    height: 100%;
    width: 100%;
}

.checks a
{
    color: #c00;
}

.checks h4
{
    padding: 1em 0 0.5em;
    font-weight: normal;
}

.check
{
    float: left;
}

.check-name
{
    width: 10em;
    display: inline-block;
}

.check-count
{
    text-align: right;
    width: 3em;
    padding-right: 6em;
    display: inline-block;
 }

html[dir="rtl"] .check-count
{
    padding-right: 0;
    padding-left: 5%;
}

#check-100 a
{
    font-weight: bold;
}


div.small
{
    font-size: 1em;
}

.tiny
{
    font-size: 0.9em;
}

/* PROGRESSBAR */

table.graph
{
    height: 9px;
    width: 200px;
    background-color: #ccc;
    font-size: 1px;
}

/* When browser size is 950px or less, show the smaller version of the progressbar */
@media screen and (max-width: 950px)
{
    table.graph
    {
        width: 100px;
    }
}

/* When browser size is 1600px or less, show the smaller version of the progressbar on the main page */
@media screen and (max-width: 1600px)
{
    #main-overview table.graph
    {
        width: 100px;
    }
}    

table.graph td
{
    padding: 0 !important;
}

table.graph .translated
{
    background-color: #090;
}

table.graph .fuzzy
{
    background-color: #9c9;
}

/* PROGRESSBAR LEGEND */

span.legend
{
    display: inline-block;
    width: 1em;
    height: 1em;
    background-color: #ccc;
    margin-right: 0.3em;
    margin-bottom: -0.1em;
}

span.legend.translated
{
    background-color: #090;
}

span.legend.fuzzy
{
    background-color: #9c9;
}

/* SORTABLE */

table.sortable th,
table tfoot,
#user-contributions table th
{
    color: #999;
    font-size: 85%;
}

table.sortable th
{
    cursor: pointer;
    white-space: nowrap;
}

table.sortable th i
{
  vertical-align: middle;
}

table.sortable th.sorttable_nosort
{
    cursor: default;
}

table.sortable td
{
    padding: 5px;
}


table.sortable th.sorttable_sorted,
table.sortable th.sorttable_sorted_reverse
{
    color: #130f30;
}
/* ... */

